<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>
    
    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        
        <RadioButton
            android:id="@+id/rb_main_chat"
            android:text="@string/app_name"
            style="@style/MainButtonStyle"/>

        <RadioButton
            android:id="@+id/rb_main_contacts"
            android:text="@string/main_contacts"
            style="@style/MainButtonStyle"/>

        <RadioButton
            android:id="@+id/rb_main_setting"
            android:text="@string/main_setting"
            style="@style/MainButtonStyle"/>

    </RadioGroup>

</LinearLayout>
