<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/btn_blue_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:text="@string/act_add_friend"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/iv_add_find"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:src="@drawable/find_friend"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ease_default_avatar" />

        <TextView
            android:id="@+id/tv_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_add_photo"
            android:text="@string/act_add_name"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_add_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape"
            android:text="@string/act_add_add" />
    </RelativeLayout>

</LinearLayout>
